deployment/base/data_app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  labels:
    app: smart-wearables
    component: data
  name: smart-wearables-sbdata-deployment
  namespace: smartwearables
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: smart-wearables
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: smart-wearables
        component: data
    spec:
      volumes:
        - name: swc-vc-sign-key
          secret:
            secretName: swc-vc-sign-key
        - name: jwe-auth-private-key-file-vol
          secret:
            secretName: jwe-auth-private-key-file
      containers:
        - env:
            - name: DATABASE_URL
              valueFrom:
                configMapKeyRef:
                  key: data_db_url
                  name: db-configmap
            - name: DB_IP_PORT_SCHEMA
              valueFrom:
                configMapKeyRef:
                  key: data_db_url
                  name: db-configmap
            - name: DB_USERNAME
              value: root
            - name: DB_PASSWORD
              valueFrom:
                secretKeyRef:
                  name: mysql-credentials
                  key: mysql-password
            - name: GARMIN_CONSUMER_KEY
              valueFrom:
                secretKeyRef:
                  name: swc-garmin-api-credentials
                  key: consumer-key
            - name: GARMIN_CONSUMER_SECRET
              valueFrom:
                secretKeyRef:
                  name: swc-garmin-api-credentials
                  key: consumer-secret
            - name: AES_ENCRYPTION_KEY
              valueFrom:
                secretKeyRef:
                  name: swc-encryption
                  key: aes-key
            - name: DATA_TRANSFER_URL_TEMPLATE
              value: https://smartwearables.health-x.org/data/health-x/asset_data/%s
            - name: EDC_API_KEY
              valueFrom:
                secretKeyRef:
                  name: swc-edc-api
                  key: api-key
            - name: CONNECTOR_RUN-DSP_SERVER_PORT
              value: "8980"
            - name: ASSET_GENERATION_URL
              value: http://provider-connector.provider-connector:8282/protocol/assetgeneration
            - name: GARMIN_OAUTH_SUCCESS_REDIRECT_URL
              valueFrom:
                configMapKeyRef:
                  key: swc_home_url
                  name: app-configmap
            - name: SWC_BASE_URL
              valueFrom:
                configMapKeyRef:
                  key: swc_base_url
                  name: app-configmap
            - name: SWC_PUBLIC_URL
              valueFrom:
                configMapKeyRef:
                  key: swc_public_url
                  name: app-configmap
            - name: JAVA_TOOL_OPTIONS
              value: -agentlib:jdwp=transport=dt_socket,address=*:1044,server=y,suspend=n
            - name: SWC_KEYCLOAK_CLIENT_SECRET
              valueFrom:
                secretKeyRef:
                  name: keycloak-admin-credentials
                  key: client-secret
            - name: VC_SIGNING_PUBLIC_KEY_FILENAME
              value: /tmp/swc-vc-sign-key/public.key
            - name: VC_SIGNING_PRIVATE_KEY_FILENAME
              value: /tmp/swc-vc-sign-key/private.key
            - name: AUTH_JWE_PRIVATE_KEY_FILENAME
              value: /tmp/auth-keys/service_app_keys_private.json
            - name: SWC_JWK_SET_URI
              value: https://smartwearables.health-x.org/auth/realms/smart-wearables/protocol/openid-connect/certs
            - name: KEYCLOAK_ADMIN_USER
              valueFrom:
                secretKeyRef:
                  name: keycloak-admin-credentials
                  key: username
            - name: KEYCLOAK_ADMIN_PASSWORD
              valueFrom:
                secretKeyRef:
                  name: keycloak-admin-credentials
                  key: password
            - name: THRYVE_USERNAME
              valueFrom:
                secretKeyRef:
                  name: thryve-credentials
                  key: username
            - name: THRYVE_PASSWORD
              valueFrom:
                secretKeyRef:
                  name: thryve-credentials
                  key: password
            - name: THRYVE_APP_ID
              valueFrom:
                secretKeyRef:
                  name: thryve-credentials
                  key: app-id
            - name: THRYVE_APP_SECRET
              valueFrom:
                secretKeyRef:
                  name: thryve-credentials
                  key: app-secret
            - name: THRYVE_AUTH_REDIRECT_URI
              valueFrom:
                secretKeyRef:
                  name: thryve-credentials
                  key: auth-redirect-uri

          # image: smartwearables.cr.de-fra.ionos.com/smartwearables/ionos-data-image:latest
          image: smartwearables-data-image:latest
          imagePullPolicy: Always
          name: tomcat-sbionos-data
          volumeMounts:
            - mountPath: "/tmp/swc-vc-sign-key"
              name: swc-vc-sign-key
              readOnly: true
            - mountPath: "/tmp/auth-keys"
              name: jwe-auth-private-key-file-vol
              readOnly: true
          ports:
            - containerPort: 8080
              name: swc-data-port
              protocol: TCP
            - containerPort: 1044
              name: swc-debug-port
              protocol: TCP
            - containerPort: 8980
              name: swc-rundsp-port
              protocol: TCP
          resources:
            limits:
              cpu: "2"
              memory: 4Gi
            requests:
              cpu: "1"
              memory: 3Gi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      imagePullSecrets:
        - name: smartwearables-container-registry
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30

---

apiVersion: v1
kind: Service
metadata:
  name: swc-data-service
  namespace: smartwearables
  labels:
    app: smart-wearables
    component: data
spec:
  ports:
    - port: 80
      name: swc-data-svc-port
      targetPort: swc-data-port
      protocol: TCP
    - port: 1044
      name: swc-data-svc-debug-port
      targetPort: swc-debug-port
      protocol: TCP
    - port: 8980
      name: swc-data-svc-rundsp-port
      targetPort: swc-rundsp-port
      protocol: TCP
  type: ClusterIP
  selector:
    app: smart-wearables
    component: data
