deployment/base/keycloak.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  labels:
    app: smart-wearables
    component: keycloak
  name: smart-wearables-keycloak-deployment
  namespace: smartwearables
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: smart-wearables
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: smart-wearables
        component: keycloak
    spec:
      containers:
        - env:
            - name: KEYCLOAK_ADMIN
              valueFrom:
                secretKeyRef:
                  name: keycloak-admin-credentials
                  key: username
            - name: KEYCLOAK_ADMIN_PASSWORD
              valueFrom:
                secretKeyRef:
                  name: keycloak-admin-credentials
                  key: password
            - name: KC_FEATURES
              value: oid4vc-vci
            - name: KC_HTTP_RELATIVE_PATH
              value: /auth
            - name: KC_PROXY_HEADERS
              value: forwarded
            - name: KC_HOSTNAME_BACKCHANNEL_DYNAMIC
              value: "false"
          image: quay.io/keycloak/keycloak:26.0.0
          imagePullPolicy: IfNotPresent
          args:
            - start-dev
            - --import-realm
          name: keycloak
          ports:
            - containerPort: 8080
              name: swc-kc-port
              protocol: TCP
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30

---

apiVersion: v1
kind: Service
metadata:
  name: swc-keycloak-service
  namespace: smartwearables
  labels:
    app: smart-wearables
    component: keycloak
spec:
  ports:
    - port: 8083
      name: swc-kc-svc-port
      targetPort: swc-kc-port
      protocol: TCP
  type: NodePort
  selector:
    app: smart-wearables
    component: keycloak
