deployment/base/connector_https_route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: connector-route-https
  namespace: smartwearables
spec:
  parentRefs:
    - name: swc-gateway
      sectionName: https
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      # Takes effect when a path different from "/" is used
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: swc-connector-service
          port: 80
          weight: 100
