deployment/base/data_https_route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: data-route-https
  namespace: smartwearables
spec:
  parentRefs:
    - name: swc-gateway
      sectionName: https
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /data
      backendRefs:
        - name: swc-data-service
          port: 80
          weight: 100
      filters:
        - type: RequestHeaderModifier
          requestHeaderModifier:
            add:
              - name: X-Forwarded-Proto
                value: https
