deployment/base/keycloak_https_route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: keycloak-route-https
  namespace: smartwearables
spec:
  parentRefs:
    - name: swc-gateway
      sectionName: https
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /auth
      backendRefs:
        - name: swc-keycloak-service
          port: 8083
          weight: 100
